<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_enter_name"
                android:inputType="text"
                android:maxLines="1" />


            <EditText
                android:id="@+id/museumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_enter_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/museumType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_enter_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/visitDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:focusable="false"
                android:hint="@string/hint_visit_date"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/accountHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_account_holder_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/bankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_bank_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/pinNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_enter_pincode"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/accountNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_account_no"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_enter_pincode"
                android:inputType="text"
                android:maxLines="1" />


            <Button
                android:id="@+id/paymentButton"
                style="@style/Button.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/payment" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>