<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:scaleType="fitXY"
                android:src="@mipmap/home_image"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/ticketReservation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/ticket_reservation" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/informationDetails"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/info_details" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/reservationDetails"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/reservation_details" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/viewPayment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/view_payment" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/trackLocation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/track_location" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/sendFeedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/send_feedback" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/viewProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@mipmap/balloon_disclosure"
                android:gravity="center"
                android:text="@string/view_profile" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>